fixed height of platform dropdown row to prevent jumping around

--- a/src/app/core/modals/platform-credentials-modal/platform-credentials-modal.component.scss
+++ b/src/app/core/modals/platform-credentials-modal/platform-credentials-modal.component.scss
@@ -12,4 +12,8 @@
         outline: none;
     }
 
+    .platform-row {
+        // TODO: unify heights accross the app
+        height: 2em;
+    }
 }
